tests/scan/fixtures/validation/negative/clean_cargo_clean_config_loader/src/lib.rs
//! A clean Rust crate: clean_config_loader.

pub fn hello() -> &'static str { "hello" }
